2009-04-26
	* "Show selected file property" popup menu.
	* Rd file of GetCaseId, GetCaseName and RQDAQuery.
	
2009-04-24
	* Add more to the popup menu of F-cat Tab (e.g. "move selected files to  F-cat...").
	
2009-04-21
	* Split GetCaseId to GetCaseId and GetCaseName.
	* New function of RQDAQuery to wrap a call to dbGetQuery.
	
2009-04-20
	* New function of GetCaseId(): the name may be changed in the future.
	
2009-04-19
	* New function of GetFileIdSets, can be used to do more complex conditional retrieval.
	
2009-04-18
	* Minor bugfix related to naming with "'".
	* Add "Clean Project" button.
	
2009-04-17
	* Add documents of RQDA2tm.Rd,retrieval.Rd and GetAttr.Rd.

2009-04-16
	* GetFileId() can return fid of selected files now.
	
2009-04-15
	* "Add To ..." popup menu of files.of.category Widget.
	* bugfixes of codes Tab and Attrs Tab: now can handle code containing "'" correctly.
	* reorganization of files: rename.r is merged to utils.R; Variables.R is renamed to Atrributes.R; AddVarWidget.R is renamed to AttributesWidget.R (rev 87).
	* retrieval() is exported for conditional coding-retrieval.
	
2009-04-14
	* Delete multiple files at a time now.
	* "Delete selected file" and "rename selected file" popup menu of files.of.category Widget.

2009-04-13
	* improve retrieval2() to place cursor at the beginning of the retrieved coding widget.
	* Add cliked handler to C2Info widget.

2009-04-12
	* Double-click handler of Attrs and Journal Tabs.
	* "Show coded/uncoded files only" popup menu for File Category.
	* conditional retrieval.

2009-04-10
	* rename button of journal Tab
	* bugfixes of Attrs Tab.
	* change the name of PushBack() to ShowSubset(): avoid the confusion of base:::pushBack().

2009-04-08
	* Add journal Tab (rename button is not implemented yet).
	
2009-04-07
	* Modify MemoWidget() to set the default fontsize as 11pt.
	* Fix all bugs caused by change of enc(): encoding issue.
	* new function of PushBack().

2009-04-06